Se agrega CSS y conexión con Heroku

--- a/minichat/views/layout.html
+++ b/minichat/views/layout.html
@@ -5,6 +5,9 @@
 	<title>{% block title %} {% endblock %}</title>
 	{% block head %}
 	{% endblock %}
+  <style>
+    @import url(http://fonts.googleapis.com/css?family=Raleway);
+  </style>l
 </head>
 <body>
 	{% block content %}
