--- a/minichat/views/chat.html
+++ b/minichat/views/chat.html
@@ -8,143 +8,32 @@
 <script src="/js/main.js" type="text/javascript"></script>
 <link rel="stylesheet" type="text/css" href="">
 
-<style type="text/css">
-@import url(http://weloveiconfonts.com/api/?family=typicons);
-[class*="typicons-"]:before {
-  font-family: 'Typicons', sans-serif;
-}
+<script type='text/template' id='htmlTemplate'>
+        <li class="list-group-item"> 
+            <span class='user-name'> <%=user%> </span>
+            <span class='user-message'><%=message%> </span>
+        </li>
 
-.module {
-  width: 300px;
-  margin: 20px auto;
-}
+    </script>
 
-.top-bar {
-  background: #666;
-  color: white;
-  padding: 0.5rem;
-  position: relative;
-  overflow: hidden;
-}
-.top-bar h1 {
-  display: inline;
-  font-size: 1.1rem;
-}
-.top-bar .typicons-message {
-  display: inline-block;
-  padding: 4px 5px 2px 5px;
-}
-.top-bar .typicons-minus {
-  position: relative;
-  top: 3px;
-}
-.top-bar .left {
-  float: left;
-}
-.top-bar .right {
-  float: right;
-  padding-top: 5px;
-}
-.top-bar > * {
-  position: relative;
-}
-.top-bar::before {
-  content: "";
-  position: absolute;
-  top: -100%;
-  left: 0;
-  right: 0;
-  bottom: -100%;
-  opacity: 0.25;
-  background: radial-gradient(#ffffff, #000000);
-  animation: pulse 1s ease alternate infinite;
-}
+    <!-- import css -->
+    <link href="/css/bootstrap.css" rel="stylesheet" media="screen">
+    <link rel="stylesheet" type="text/css" href="/css/styles.css">
 
-.discussion {
-  list-style: none;
-  background: #e5e5e5;
-  margin: 0;
-  padding: 0 0 50px 0;
-}
-.discussion li {
-  padding: 0.5rem;
-  overflow: hidden;
-  display: flex;
-}
-.discussion .avatar {
-  width: 40px;
-  position: relative;
-}
-.discussion .avatar img {
-  display: block;
-  width: 100%;
-}
+    <!-- import libraries -->
+    <script src="/libs/jquery-1.10.2.js" ></script>
+    <script src="/libs/bootstrap.js" ></script>
+    <script src="/libs/underscore-min.js" ></script>
+    <script src="/libs/backbone-min.js" ></script>
 
-.other .avatar:after {
-  content: "";
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 0;
-  height: 0;
-  border: 5px solid white;
-  border-left-color: transparent;
-  border-bottom-color: transparent;
-}
+    <!-- import code -->
+    <script src="/js/scripts.js" ></script>
 
-.self {
-  justify-content: flex-end;
-  align-items: flex-end;
-}
-.self .messages {
-  order: 1;
-  border-bottom-right-radius: 0;
-}
-.self .avatar {
-  order: 2;
-}
-.self .avatar:after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 0;
-  height: 0;
-  border: 5px solid white;
-  border-right-color: transparent;
-  border-top-color: transparent;
-  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
-}
-
-.messages {
-  background: white;
-  padding: 10px;
-  border-radius: 2px;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
-}
-.messages p {
-  font-size: 0.8rem;
-  margin: 0 0 0.2rem 0;
-}
-.messages time {
-  font-size: 0.7rem;
-  color: #ccc;
-}
-
-@keyframes pulse {
-  from {
-    opacity: 0;
-  }
-
-  to {
-    opacity: 0.5;
-  }
-}
-</style>
 
 {% endblock %}
 
 {% block content %}
+<!--
 <h2>Bienvenido {{ user }}</h2>
 <a href="/log-out" title="Log-out">Log-out</a>
 <br>
@@ -154,56 +43,23 @@ Usuarios Online:
 	<li>{{person}}</li>
 {% endfor %}
 </ul>
+!-->
+<div class="container">
+      <div class="header">
+        <h3 class="text-muted">Chat</h3>
+      </div>
+      <div class="jumbotron">
+        <ul class="list-group"></ul>
+      </div>
+     <div class="container2">
+        <textarea class="form-control"></textarea>
+        <a class="btn btn-primary">Enviar</a>
 
+     </div>
+      <div class="row marketing"></div>
+      <div class="footer"></div>
 
-<section class="module">
-  
-  <header class="top-bar">
-    
-    <div class="left">
-      <span class="icon typicons-message"></span>
-      <h1>Hangouts</h1>
-    </div>
-    
-    <div class="right">
-      <span class="icon typicons-minus"></span>
-      <span class="icon typicons-times"></span>
-    </div>
-    
-  </header>
-  
-  <ol class="discussion">
-    <li class="other">
-      <div class="avatar">
-        <img src="http://s3-us-west-2.amazonaws.com/s.cdpn.io/5/profile/profile-80_9.jpg" />
-      </div>
-      <div class="messages">
-        <p>yeah, they do early flights cause they connect with big airports.  they wanna get u to your connection</p>
-        <time datetime="2009-11-13T20:00">Timothy • 51 min</time>
-      </div>
-    </li>
-    <li class="self">
-      <div class="avatar">
-        <img src="http://s3-us-west-2.amazonaws.com/s.cdpn.io/3/profile/profile-80_20.jpg" />
-      </div>
-      <div class="messages">
-        <p>That makes sense.</p>
-        <p>It's a pretty small airport.</p>
-        <time datetime="2009-11-13T20:14">37 mins</time>
-      </div>
-    </li>
-    <li class="other">
-      <div class="avatar">
-        <img src="http://s3-us-west-2.amazonaws.com/s.cdpn.io/5/profile/profile-80_9.jpg" />
-      </div>
-      <div class="messages">
-        <p>that mongodb thing looks good, huh?</p>
-        <p>
-          tiny master db, and huge document store</p>
-      </div>
-    </li>
-  </ol>
-  
-</section>
+</div>
+
 
 {% endblock %}
